--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Gmeek
-        uses: Meekdai/Gmeek@v2.22
+        uses: Meekdai/Gmeek@last
         with:
           index_id: ${{ github.event.issue.number }}
           access_token: ${{ secrets.GITHUB_TOKEN }}
